# AtlasQ

./: .coveragerc  .flake8  .gitignore  .lgtm.yml  .pre-commit-config.yaml  .pylintrc  LICENSE  MANIFEST.in  README.md  codecov.yml  dev-requirements.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini  version.py
.github/: .pre-commit-config.yaml  README.md  dependabot.yml
.github/.github/workflows/: pull_request_automation.yml
.github/actions/codeql/: action.yml
.github/actions/python_linter/: action.yml
.github/configurations/python_linters/: .isort.cfg  .pylintrc
.github/workflows/: _node.yml  _python.yml  _release_and_tag.yml  pull_request_automation.yml  pythonpublish.yml  release.yml  test.yml
atlasq/: __init__.py
atlasq/queryset/: __init__.py  cache.py  exceptions.py  index.py  manager.py  node.py  queryset.py  transform.py  visitor.py
tests/: test_base.py
tests/queryset/: test_cache.py  test_index.py  test_manager.py  test_node.py  test_queryset.py  test_transform.py  test_visitor.py
